force-app/main/default/objects/Tracking_Events__e/Tracking_Events__e.object-meta.xml
<CustomObject>
    <description>Event To Receive changes published by after trigger on record change</description>
    <label>Tracking Event</label>
    <pluralLabel>Tracking Events</pluralLabel>
</CustomObject>