force-app/main/default/objects/Tracking_Events__e/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>