force-app/main/default/objects/Tracking_Events__e/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>New Value</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>