force-app/main/default/objects/Tracking_Events__e/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <length>120</length>
    <type>Text</type>
</CustomField>